--- a/wmbus-reader-portable.yaml
+++ b/wmbus-reader-portable.yaml
@@ -31,7 +31,11 @@ esp32:
 #####  https://github.com/SzczepanLeon/esphome-components
 external_components:
   - source: github://SzczepanLeon/esphome-components@main
-
+    components:
+      - socket_transmitter
+      - wmbus_common
+      - wmbus_radio
+      - wmbus_meter
   
 time:
  - platform: sntp
