--- a/wmbus-reader-portable.yaml
+++ b/wmbus-reader-portable.yaml
@@ -138,7 +138,7 @@ binary_sensor:
       then:
         - lambda: |-
             id(active_index) += 1;
-            if (id(active_index) >= 3) id(active_index) = 0;          #############Tutaj ustawiamy ile jest liczników - w tym przypadku 3
+            if (id(active_index) >= 3) id(active_index) = 0;          //Tutaj ustawiamy ile jest liczników - w tym przypadku 3
             
 font:
   - file: 'Calibri-Regular.ttf'
